# cup_waypoint_editor

./: .gitignore  ARCHITECTURE.md  BUILD_EXE.md  CUP_FORMAT.md  MIGRATION.md  QUICK_BUILD.md  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  build.bat  build_exe.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  soaring_cup_editor.py  soaring_cup_editor.spec  waypoints_epbk.csv  waypoints_epbk.cup  xcsoar_cup_editor.spec  xcsoar_gui_editor.py
src/soaring_cup_file_editor/: __init__.py  models.py  utils.py
src/soaring_cup_file_editor/gui/: __init__.py  dialogs.py  main_window.py
src/xcsoar_editor/: __init__.py  __main__.py  config.py  file_io.py  models.py
src/xcsoar_editor/gui/: __init__.py  dialogs.py  main_window.py
