[build-system]
requires = ["setuptools>=60.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soaring-cup-editor"
version = "1.0.0"
description = "A waypoint editor for soaring and flight planning software"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Soaring CUP Editor Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
soaring-cup-editor = "soaring_cup_file_editor.__main__:main"

[project.urls]
Homepage = "https://github.com/ebialobrzeski/cup_waypoint_editor"
Repository = "https://github.com/ebialobrzeski/cup_waypoint_editor"
